fixed unnecessary scrollbars for contentflow area

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,7 +28,7 @@
 #loading {position: absolute; left: 0; top: 0; opacity: 0.9; z-index: 5000; width: 64px; height: 64px; background-image: url(ajax_loading.gif); background-size: 100%}
 #gadgets_collection h5.view_mode {text-align: right;}
 .hint {color: #999; font-weight: normal;}
-.ContentFlow {background-color: black; padding-top: 50px; overflow:auto}
+.ContentFlow {background-color: black; padding-top: 50px;}
 tr.collection_title td, tr.gadget_row td {text-align: center;}
 
 #upload {display: table; width:100%; 
